Added ability to append sent and received message

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
         #message-box .sent, #message-box .received{
             width: 100%;
-
+            margin-top: 10px;
         }
         #message-box .sent{
             text-align: right;
@@ -91,15 +91,8 @@
 <body>
 <div class="container">
     <div id="message-box">
-        <div class="sent">
-            <div class="message">
-                Venenatis a condimentum vitae sapien pellentesque habitant morbi. Pharetra pharetra massa massa
-                ultricies mi quis. Amet commodo nulla facilisi nullam
-            </div>
-            <div class="icon"><i class="far fa-user"></i></div>
-        </div>
         <div class="received">
-            <div class="icon"><img src="static/images/covidbot.png" alt="covidbot" style="max-width: 30px"></div>
+            <img src="static/images/covidbot.png" alt="covidbot" style="max-width: 70px">
             <div class="message">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Leo a diam sollicitudin tempor id
