--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>CovidBot App</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.1/css/all.css">
     <style>
         html, body {
